<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.e5ctech.wtfsports.dashboard.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.e5ctech.wtfsports.dashboard.fragments.FeedsFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.e5ctech.wtfsports.dashboard.fragments.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.e5ctech.wtfsports.dashboard.fragments.MatchCalendarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>