<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".accounts.activities.ResetPasswordActivity">


    <include layout="@layout/layout_toolbar"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_marginTop="150dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:background="@drawable/rounded_rect_corner_edittext"
        android:drawablePadding="6dp"
        android:paddingEnd="10dp"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/cpassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/etConfirmPassword"
        android:layout_below="@+id/etEmail"
        android:background="@drawable/rounded_rect_corner_edittext"
        android:drawablePadding="6dp"
        android:paddingEnd="10dp"
        />


    <Button
        android:text="@string/submit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_rect_corner_button"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:id="@+id/bnSumbit"
        android:textAllCaps="false"
        android:textSize="18dp" />

</androidx.appcompat.widget.LinearLayoutCompat>